<resources>
    <string name="app_name">Services &amp; Receiver</string>
    <string name="app_title">HSLU Mobile Programmierung</string>
    <string name="app_description">heute gehts um Services und Broadcast Receivers, d.h. um Hintergrung-Komponente von Android</string>
    <string name="service_title">Music Player Service</string>
    <string name="service_msgBox_connected_to_service">Mit Service verbunden</string>

    <string name="service_btnStart_title">Musicplayer starten</string>
    <string name="service_btnStop_title">Musicplayer stoppen</string>
    <string name="service_btnNext_title">Nächstes Stück</string>
    <string name="service_btnPrev_title">History abfragen</string>

    <string name="musicplayerservice_desc">Music player service</string>

    <string name="musicplayerservice_Channel_name">Music App</string>
    <string name="musicplayerservice_Channel_description">HSLU Music App Channel</string>
    <string name="receiver_title">Broadcast receivers</string>
    <string name="receiver_ckb_text">Kein BroadcastReceiver registriert</string>
    <string name="receiver_label_messages">Nachricht vom Broadcast receiver:</string>
    <string name="receiver_btn_send_broadcast">Broadcast verschicken</string>

    <string name="key_message">message</string>
</resources>
